{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 29,
  "lineage": "d30bfdf7-69f6-8e4f-6e99-617ec47ed25d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "primary_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:715210804309:instance/i-0b9fa53a4b9a03871",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9fa53a4b9a03871",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vpc-peering-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a877fee81bdd5307",
            "private_dns": "ip-10-0-1-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-35-171-26-239.compute-1.amazonaws.com",
            "public_ip": "35.171.26.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0702525478b0433ad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7ee55cb30aebb11",
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-VPC-Instance",
              "Region": "us-east-1"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-VPC-Instance",
              "Region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041c80ba8697175d9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.primary_sg",
            "aws_subnet.primary_subnet",
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary",
            "aws_vpc_peering_connection_accepter.secondary_accepter",
            "data.aws_ami.primary_ami",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "secondary_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0786adace1541ca80",
            "arn": "arn:aws:ec2:us-west-2:715210804309:instance/i-03fc5851733dc2183",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03fc5851733dc2183",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vpc-peering-demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb3f24b7e649ff57",
            "private_dns": "ip-10-1-1-254.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.254",
            "public_dns": "ec2-44-246-216-201.us-west-2.compute.amazonaws.com",
            "public_ip": "44.246.216.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05106c5a03a2f5a29",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0631caa80f362af3d",
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-Instance",
              "Region": "us-west-2"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-Instance",
              "Region": "us-west-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b5ae266a6d4e098"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.secondary_sg",
            "aws_subnet.secondary_subnet",
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary",
            "aws_vpc_peering_connection_accepter.secondary_accepter",
            "data.aws_ami.secondary_ami",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715210804309:internet-gateway/igw-0cdcc5e37ee2dad87",
            "id": "igw-0cdcc5e37ee2dad87",
            "owner_id": "715210804309",
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-IGW"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-IGW"
            },
            "vpc_id": "vpc-0e01e406fe2e9c1fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "secondary_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715210804309:internet-gateway/igw-03c2c370bd251dbb8",
            "id": "igw-03c2c370bd251dbb8",
            "owner_id": "715210804309",
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-IGW"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-IGW"
            },
            "vpc_id": "vpc-0d5f015e129b68377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "primary_to_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-064a719ab1a7895d03322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-064a719ab1a7895d0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0980ea13671aaaf73"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.primary_igw",
            "aws_route_table.primary_rt",
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary",
            "aws_vpc_peering_connection_accepter.secondary_accepter"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "secondary_to_primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0403fec2f1925bd17179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0403fec2f1925bd17",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0980ea13671aaaf73"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.secondary_igw",
            "aws_route_table.secondary_rt",
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary",
            "aws_vpc_peering_connection_accepter.secondary_accepter"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715210804309:route-table/rtb-064a719ab1a7895d0",
            "id": "rtb-064a719ab1a7895d0",
            "owner_id": "715210804309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdcc5e37ee2dad87",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-Route-Table"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e01e406fe2e9c1fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.primary_igw",
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "secondary_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715210804309:route-table/rtb-0403fec2f1925bd17",
            "id": "rtb-0403fec2f1925bd17",
            "owner_id": "715210804309",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03c2c370bd251dbb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-Route-Table"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5f015e129b68377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.secondary_igw",
            "aws_vpc.secondary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6957f294b42dea0",
            "route_table_id": "rtb-064a719ab1a7895d0",
            "subnet_id": "subnet-0f7ee55cb30aebb11"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.primary_igw",
            "aws_route_table.primary_rt",
            "aws_subnet.primary_subnet",
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a413da4d7966da41",
            "route_table_id": "rtb-0403fec2f1925bd17",
            "subnet_id": "subnet-0631caa80f362af3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.secondary_igw",
            "aws_route_table.secondary_rt",
            "aws_subnet.secondary_subnet",
            "aws_vpc.secondary_vpc",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715210804309:security-group/sg-041c80ba8697175d9",
            "description": "Security group for Primary VPC instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041c80ba8697175d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "All traffic from Secondary VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "ICMP from Secondary VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "primary-vpc-sg",
            "name_prefix": "",
            "owner_id": "715210804309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-VPC-SG"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-VPC-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e01e406fe2e9c1fd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secondary_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715210804309:security-group/sg-08b5ae266a6d4e098",
            "description": "Security group for Secondary VPC instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b5ae266a6d4e098",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic from Primary VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "ICMP from Primary VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "secondary-vpc-sg",
            "name_prefix": "",
            "owner_id": "715210804309",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-SG"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5f015e129b68377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715210804309:subnet/subnet-0f7ee55cb30aebb11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7ee55cb30aebb11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715210804309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-Subnet-us-east-1"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-Subnet-us-east-1"
            },
            "vpc_id": "vpc-0e01e406fe2e9c1fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715210804309:subnet/subnet-0631caa80f362af3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0631caa80f362af3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "715210804309",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-Subnet-us-west-2"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-Subnet-us-west-2"
            },
            "vpc_id": "vpc-0d5f015e129b68377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.secondary_vpc",
            "data.aws_availability_zones.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715210804309:vpc/vpc-0e01e406fe2e9c1fd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0607e3fa0fda5c4e5",
            "default_route_table_id": "rtb-0d372d92c7e1e1d7c",
            "default_security_group_id": "sg-0f28762c96d082f60",
            "dhcp_options_id": "dopt-02a788ded2a486046",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e01e406fe2e9c1fd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d372d92c7e1e1d7c",
            "owner_id": "715210804309",
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-VPC-us-east-1",
              "Purpose": "VPC-Peering-Demo"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-VPC-us-east-1",
              "Purpose": "VPC-Peering-Demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secondary_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:715210804309:vpc/vpc-0d5f015e129b68377",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-028b884d0059e647d",
            "default_route_table_id": "rtb-0ad08d6530b3d152a",
            "default_security_group_id": "sg-027a6bc79d5559f17",
            "dhcp_options_id": "dopt-03d6107411fe8fd6a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5f015e129b68377",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ad08d6530b3d152a",
            "owner_id": "715210804309",
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-us-west-2",
              "Purpose": "VPC-Peering-Demo"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-VPC-us-west-2",
              "Purpose": "VPC-Peering-Demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "primary_to_secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": false,
            "id": "pcx-0980ea13671aaaf73",
            "peer_owner_id": "715210804309",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0d5f015e129b68377",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "Demo",
              "Name": "Primary-to-Secondary-Peering",
              "Side": "Requester"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Primary-to-Secondary-Peering",
              "Side": "Requester"
            },
            "vpc_id": "vpc-0e01e406fe2e9c1fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "secondary_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0980ea13671aaaf73",
            "peer_owner_id": "715210804309",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0d5f015e129b68377",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "Demo",
              "Name": "Secondary-Peering-Accepter",
              "Side": "Accepter"
            },
            "tags_all": {
              "Environment": "Demo",
              "Name": "Secondary-Peering-Accepter",
              "Side": "Accepter"
            },
            "vpc_id": "vpc-0e01e406fe2e9c1fd",
            "vpc_peering_connection_id": "pcx-0980ea13671aaaf73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.primary_vpc",
            "aws_vpc.secondary_vpc",
            "aws_vpc_peering_connection.primary_to_secondary"
          ]
        }
      ]
    }
  ]
}